# CircuitPython_IS31FL3730

./: README.rst  README.rst.license  delete.me  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml
examples/: scrollphat_simpletest.py
is31fl3730/: __init__.py
