# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2023 David Glaude
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-is31fl3730"
description = "CircuitPython driver for the IS31FL3730 charlieplex IC."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "David Glaude", email = "david.glaude@gmail.com"}
]
urls = {Homepage = "https://github.com/dglaude/Public_CircuitPython_CircuitPython_IS31FL3730"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "circuitpython_is31fl3730",
    "scrollp-pHAT,",
    "ltp305-python",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
packages = ["circuitpython_is31fl3730"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
